# laurea

./: .gitignore  DISCOVERY.md  LICENSE  METHODOLOGY.md  README.md  pyproject.toml  value-repos.json
.github/workflows/: laurea.yml
assets/: SUPERLATIVES.md  metrics.json  verdict.jsonl
docs/launch/: reddit-r-python.md  show-hn.md  x-thread.md
src/laurea/: __init__.py  baselines.py  cli.py  detectors.py  github.py  models.py  render.py  verdict.py
tests/: test_laurea.py  test_verdict.py
