[project]
name = "laurea"
version = "0.1.0"
description = "Evidence-backed excellence engine: computes verifiable percentile placements from live GitHub data and renders them as animated SVG laurels. Zero runtime dependencies."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Anthony James Padavano" }]
keywords = ["github", "metrics", "percentile", "portfolio", "svg", "badges"]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
laurea = "laurea.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
